--- a/bower.json
+++ b/bower.json
@@ -2,27 +2,41 @@
     "name": "backbone.hal",
     "description" : "Easy use of HAL in your Backbone application.",
     "version" : "0.1.0",
-    "private" : true,
     "homepage": "https://github.com/gomoob/backbone.hateoas",
     "authors": [
-        "bgaillard <baptiste.gaillard@gomoob.com>",
-        "simonbaudry <simon.baudry@gomoob.com>"
+        {
+            "name" : "Baptiste Gaillard", 
+            "email" : "baptiste.gaillard@gomoob.com"
+        },
+        {
+            "name" : "Simon Baudry",
+            "email" : "simon.baudry@gomoob.com"   
+        }
     ],
     "keywords" : [
-        "gomoob", 
-        "widget"  
+        "backbone", 
+        "hal",
+        "hateoas",
+        "gomoob"  
     ],
     "main" : [
         "dist/backbone.hateoas.min.js"
     ],
     "ignore": [
-        "target/*",
+        "reports",
+        "test",
         ".gitignore",
         ".jshintrc", 
+        ".npmignore",
         ".project",
+        ".travis.yml",
         "Gruntfile.js",
         "package.json"
     ],
-    "dependencies": {},
+    "dependencies": {
+        "backbone": "1.0.0 - 1.2.0",
+        "underscore": "1.4.4 - 1.8.3",
+        "backbone.paginator": "2.0.0 - 2.0.2"
+    },
     "devDependencies": {}
 }
