--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "url": "http://www.gomoob.com"
   },
   "keywords": [
-    "gomoob",
-    "widget"
+    "backbone", 
+    "hal",
+    "hateoas",
+    "gomoob"  
   ],
   "main": "dist/backbone.hateoas.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/gomoob/backbone.hateoas"
   },
+  "dependencies": {
+    "backbone": "1.0.0 - 1.2.0",
+    "underscore": "1.4.4 - 1.8.3",
+    "backbone.paginator": "2.0.0 - 2.0.2"
+  },
   "devDependencies": {
-    "backbone": "~1.1",
     "blanket": "~1.1",
     "bower": "~1.3",
     "chai": "~2.1",
