Fix bower package name.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "backbone.hal",
+    "name": "backbone.hateoas",
     "description" : "Easy use of HAL in your Backbone application.",
     "version" : "0.1.0-alpha1",
     "homepage": "https://github.com/gomoob/backbone.hateoas",
