--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "keywords": [
     "backbone",
-    "marionette", 
+    "marionette",
     "hal",
     "hateoas",
     "REST",
@@ -42,6 +42,7 @@
     "grunt-contrib-clean": "~0.6",
     "grunt-contrib-jshint": "~0.11",
     "grunt-contrib-uglify": "~0.8",
+    "grunt-coveralls": "^1.0.0",
     "grunt-istanbul": "~0.5",
     "grunt-jsdoc": "~0.5",
     "grunt-mocha-test": "~0.12",
