--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - npm install -g grunt-cli
   - npm install
 after_success:
-  - npm run-script coverage
+  - npm run-script coverage-coveralls
