--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Jekyll configuration
 
-name: My blog
-description: A jekyll theme
+name: backbone.hateoas
+description: backbone.hateoas
 
 # url is currently only used only for the RSS feed in feed.xml
-url: http://scotte.github.io
+url: http://gomoob.github.io/backbone.hateoas
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: /jekyll-clean
+baseurl: /backbone.hateoas
 
 # This can be '' to hide the Github nav button
-github: 'scotte/jekyll-clean'
+github: 'gomoob/backbone.hateoas'
 
 # Set this to your UA-# value, or '' to disable the block completely
 gaaccount: ''
