--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ disqus: ''
 comments: true
 
 permalink: /:year/:month/:title
-paginate: 3
+paginate: 5
+paginate_path: "news/page:num/"
 
 highlighter: pygments
 markdown: redcarpet
