--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "backbone.hateoas",
     "description" : "Easy use of HAL in your Backbone application.",
-    "version" : "0.1.0-alpha.10",
+    "version" : "0.1.0-beta.1",
     "license": "MIT",
     "homepage": "https://github.com/gomoob/backbone.hateoas",
     "authors": [
