Continue documentation. Enable Google Analytics in documentation.

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /backbone.hateoas
 github: 'gomoob/backbone.hateoas'
 
 # Set this to your UA-# value, or '' to disable the block completely
-gaaccount: ''
+gaaccount: 'UA-30020783-3'
 
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
