--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-    "name": "backbone.hateoas",
+    "name": "backbone-hateoas",
     "description" : "Easy use of HAL in your Backbone application.",
-    "version" : "0.1.0-beta.1",
+    "version" : "0.1.0-beta.3",
     "license": "MIT",
     "homepage": "https://github.com/gomoob/backbone.hateoas",
     "authors": [
@@ -41,6 +41,5 @@
         "underscore": "1.4.4 - 1.6.0",
         "backbone.paginator": "2.0.0 - 2.0.2",
         "jquery": "^1.8.0 || ^2.0.0"
-    },
-    "devDependencies": {}
+    }
 }
