--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backbone.hateoas",
+  "name": "backbone-hateoas",
   "description": "Easy use of HAL in your Backbone application.",
   "version": "0.1.0-beta.3",
   "license": "MIT",
